assets/css/main.css
/* ... */
		input[type="button"]:hover,
		input[type="submit"]:hover,
		input[type="reset"]:hover,
		button:hover,
		.button:hover {
			background-color: #333333;
		}

		input[type="button"]:active,
		input[type="submit"]:active,
		input[type="reset"]:active,
		button:active,
		.button:active {
			background-color: #444444;
		}

		input[type="button"].alt,
		input[type="submit"].alt,
		input[type="reset"].alt,
		button.alt,
		.button.alt {
			background-color: #777777;
		}

			input[type="button"].alt:hover,
			input[type="submit"].alt:hover,
			input[type="reset"].alt:hover,
			button.alt:hover,
			.button.alt:hover {
				background-color: #888888;
			}

			input[type="button"].alt:active,
			input[type="submit"].alt:active,
			input[type="reset"].alt:active,
			button.alt:active,
			.button.alt:active {
				background-color: #999999;
			}

		input[type="button"].small,
		input[type="submit"].small,
		input[type="reset"].small,
		button.small,
		.button.small {
			font-size: 0.75em;
		}

		input[type="button"].large,
		input[type="submit"].large,
		input[type="reset"].large,
		button.large,
		.button.large {
			font-size: 1.25em;
			padding: 0.5em 1.25em 0.5em 1.25em;
		}

		input[type="button"].xlarge,
		input[type="submit"].xlarge,
		input[type="reset"].xlarge,
		button.xlarge,
		.button.xlarge {
			font-size: 1.5em;
			padding: 0.5em 1.25em 0.5em 1.25em;
		}

		@media screen and (max-width: 736px) {

			input[type="button"],
			input[type="submit"],
			input[type="reset"],
			button,
			.button {
				width: 100%;
			}

		}

/* List */

	ul {
		list-style: disc;
		padding-left: 1em;
	}

		ul li {
			padding-left: 0.5em;
		}

	ol {
		list-style: decimal;
		padding-left: 1.25em;
	}

		ol li {
			padding-left: 0.25em;
		}

/* Actions */

	ul.actions {
		list-style: none;
		padding-left: 0;
	}

		ul.actions li {
			display: inline-block;
			padding-left: 0;
			margin: 0 0 0 0.5em;
		}

			ul.actions li:first-child {
				margin-left: 0;
			}

		@media screen and (max-width: 736px) {

			ul.actions li {
				display: block;
				margin: 0.75em 0 0 0;
			}

				ul.actions li:first-child {
					margin-top: 0;
				}

		}

/* Icons */

	.icon {
		text-decoration: none;
		position: relative;
		text-decoration: none;
	}

		.icon:before {
			-moz-osx-font-smoothing: grayscale;
			-webkit-font-smoothing: antialiased;
			display: inline-block;
			font-style: normal;
			font-variant: normal;
			text-rendering: auto;
			line-height: 1;
			text-transform: none !important;
			font-family: 'Font Awesome 5 Free';
			font-weight: 400;
		}

		.iconpage:before {
			-moz-osx-font-smoothing: grayscale;
			-webkit-font-smoothing: antialiased;
			display: inline;
			font-style: normal;
			font-variant: normal;
			text-rendering: auto;
			line-height: 1;
			text-transform: none !important;
			font-family: 'Font Awesome 5 Free';
			font-weight: 400;
		}
		.iconpage.solid:before {
			font-weight: 900;
		}

		.icon.solid:before {
			font-weight: 900;
		}

		.icon.brands:before {
			font-family: 'Font Awesome 5 Brands';
		}

		.icon:before {
			line-height: inherit;
		}

		.icon > .label {
			display: none;
		}

/* Nav */

	#nav {
		text-align: center;
		height: 4.25em;
		cursor: default;
		overflow-x: auto;
  		overflow-y: hidden;
		white-space:nowrap ;
		
	}

		#nav a {
			position: relative;
			display: inline-block;
			color: #ffffff;
			width: 1em;
			height: 1em;
			line-height: 0.9em;
			font-size: 2.5em;
			margin: 0 0.25em 0 0.25em;
			opacity: 0.35;
			outline: 0;
			-moz-transition: opacity .25s ease-in-out;
			-webkit-transition: opacity .25s ease-in-out;
			-ms-transition: opacity .25s ease-in-out;
			transition: opacity .25s ease-in-out;
		}

			#nav a.icon:before {
				padding-right: 0;
			}

			#nav a:before {
				font-size: 0.8em;
			}

			#nav a:after {
				content: '';
				display: block;
				position: absolute;
				left: 50%;
				bottom: -0.75em;
				margin-left: -0.5em;
				border-bottom: solid 0em #ffffff;
				border-left: solid 0.5em transparent;
				border-right: solid 0.5em transparent;
				-moz-transition: border-bottom-width .25s ease-in-out;
				-webkit-transition: border-bottom-width .25s ease-in-out;
				-ms-transition: border-bottom-width .25s ease-in-out;
				transition: border-bottom-width .25s ease-in-out;
			}

			#nav a span {
				display: block;
				position: absolute;
				background: #222222;
				color: #ffffff;
				top: -2.75em;
				font-size: 0.3em;
				height: 2.25em;
				line-height: 2.25em;
				left: 50%;
				opacity: 0;
				-moz-transition: opacity .25s ease-in-out;
				-webkit-transition: opacity .25s ease-in-out;
				-ms-transition: opacity .25s ease-in-out;
				transition: opacity .25s ease-in-out;
				width: 5.5em;
				margin-left: -2.75em;
			}

				#nav a span:after {
					content: '';
					display: block;
					position: absolute;
					bottom: -0.4em;
					left: 50%;
					margin-left: -0.6em;
					border-top: solid 0.6em #222222;
					border-left: solid 0.6em transparent;
					border-right: solid 0.6em transparent;
				}

			#nav a:hover {
				opacity: 1.0;
			}

				#nav a:hover span {
					opacity: 1.0;
				}

			#nav a.active {
				opacity: 1.0;
			}

				#nav a.active:after {
					border-bottom-width: 0.5em;
				}

		@media screen and (max-width: 980px) {

			#nav a span {
				display: none;
			}
		}
		#nav::-webkit-scrollbar {
			display: none;
		  }
		#nav {
			-ms-overflow-style: none;  /* IE and Edge */
			scrollbar-width: none;  /* Firefox */
		  }
		  #nav {
			-webkit-overflow-scrolling: touch;
		  } 
		@media only screen and (max-width: 540px) {
			#nav {
				width:20em;
			}
		}

		@media only screen and (min-width: 540px) and (max-width: 820px) {
			#nav {
				width:20em;
			}
		}
/* ... */

